--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.3.21",
+    "locomotive-scroll": "^4.1.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.80.4",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
