--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "express": "^4.21.1",
     "framer-motion": "^11.3.21",
     "locomotive-scroll": "^4.1.4",
     "next": "14.2.5",
@@ -17,6 +18,7 @@
     "react-dom": "^18",
     "sass": "^1.80.4",
     "tailwind-merge": "^2.4.0"
+
   },
   "devDependencies": {
     "@types/locomotive-scroll": "^4.1.3",
