--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "framer-motion": "^11.3.21",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
-    "next": "14.2.5",
+    "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sass": "^1.80.4",
     "tailwind-merge": "^2.4.0"
   },
@@ -28,8 +29,12 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^5.3.4"
   }
 }
